gedit spell plugin: select first mispelled word

First mispelled word was not selected because the focus was stolen by the "Check spelling" dialog.

Change get_next_misspelled_word signature to get the word start and end
Refactor the selection of the word
Select the word after showing the dialog and
after each next words.

https://bugzilla.gnome.org/show_bug.cgi?id=650829